--- a/RCdetection/templates/index.html
+++ b/RCdetection/templates/index.html
@@ -141,6 +141,13 @@
         	top: 60%;
         }
 
+        #submit_feature{
+        	position:absolute;
+        	top:0px;
+        	right:0px;
+        	height: 20px;
+        }
+
         #category_scatterplot{
         	width: 60%;
         	height: 100%;
@@ -157,12 +164,14 @@
 <body>
 	<div id = "feature_expl" >
 		<div id = "feature_distribution" ></div>
-		<div id = "feature_variance" ></div>
+		<div id = "feature_variance" >
+			<button id = "submit_feature" onclick="select_feature()">确定</button></th>
+		</div>
 		<div id = "feature_subspace" ></div>
        
 	</div>
 	<div id = "data_expl"  style="overflow: auto">
-		<button id = "submit_data" onclick="selected_data()">提交</button></th>
+		<button id = "submit_data" onclick="select_data()">提交</button></th>
 			<table id = "data_select" >
 				<tr id = "data_title">
 					<th>
@@ -192,9 +201,13 @@
         data_position_min = data.data_position_min;
         data_position_max = data.data_position_max;
         category_mean = data.category_mean;
+        category_index = data.category_index;
 
 
         var selected_data_instances = [];//data instanvces that selected by data table
+        var selected_feature = [];//features selected for further analysis
+        var chosen_feature = [];//mark for each feature
+        	for(var i = 0; i < feature_name.length; i++){chosen_feature.push(0);}
 
         show_data();
         draw_category_scatterplot(data_position);
@@ -233,7 +246,7 @@
 	   		}
         }
 
-        function selected_data(){
+        function select_data(){
         	console.log("selected");
         	selected_data_instances = [];
         	//return the selected data
@@ -410,6 +423,7 @@
 			    .data(data) // the .filter part is just to keep a few dots on the chart, not all of them
 			    .enter()
 			    .append("circle")
+			      .attr("id",function(d,i){return "circle"+String(i);})
 			      .attr("cx", function (d) { return x(d[0]); } )
 			      .attr("cy", function (d) { return y(d[1]); } )
 			      .attr("r", 4)
@@ -466,9 +480,11 @@
 
 			// A function that change this tooltip when the user hover a point.
   			// Its opacity is set to 1: we can now see it. Plus it set the text and position of tooltip depending on the datapoint (d)
-			var mouseover = function(d) {
+			var mouseover = function(d,i) {
 			    tooltip
 			      .style("opacity", 1)
+			    var rect = d3.select("#feature_variance"+String(i))
+		     		.style("fill", "#f0e68c")
 			  }
 
 			var mousemove = function(d,i) {
@@ -479,11 +495,20 @@
 			  }
 
 			  // A function that change this tooltip when the leaves a point: just need to set opacity to 0 again
-			var mouseleave = function(d) {
+			var mouseleave = function(d,i) {
 			    tooltip
 			      .transition()
 			      .duration(200)
 			      .style("opacity", 0)
+		      	if(chosen_feature[i] == 0){
+		      		var rect = d3.select("#feature_variance"+String(i))
+		     		.style("fill", "#fa8072")
+		      	}
+		      	else if (chosen_feature[i] == 1){
+		      		var rect = d3.select("#feature_variance"+String(i))
+		     		.style("fill", "#ffdab9")
+		      	}
+
 			  }
 
 			// Add dots
@@ -496,6 +521,7 @@
 			      .attr("y", function (d) { return y(d[1]); } )
 			      .attr("width", 7)
 			      .attr("height", 7)
+			      .attr("id",function(d,i){return "feature_rect"+String(i)})
 			      .style("fill", "#ffff00")
 			      .style("opacity", 0.8)
 			      .style("stroke", "white")
@@ -556,7 +582,7 @@
 			    .style("border-radius", "5px")
 			    .style("padding", "10px")
 
-			  var showTooltip = function(d) {
+			  var showTooltip = function(d,i) {
 			    tooltip
 			      .style("opacity", 1)
 			    tooltip
@@ -564,6 +590,8 @@
 			      .style("left", (d3.mouse(this)[0]+40) + "px")
 			      .style("top", (d3.mouse(this)[1]) + "px")
 			     console.log("here");
+			    var rect = d3.select("#feature_rect"+String(i))
+			     	.style("fill", "#fa8072")
 			  }
 			  var moveTooltip = function(d) {
 			    tooltip
@@ -571,11 +599,27 @@
 			    .style("top", (d3.mouse(this)[1]) + "px")
 			  }
 			  // A function that change this tooltip when the leaves a point: just need to set opacity to 0 again
-			  var hideTooltip = function(d) {
+			  var hideTooltip = function(d,i) {
 			    tooltip
 			      .transition()
 			      .duration(100)
 			      .style("opacity", 0)
+		      var rect = d3.select("#feature_rect"+String(i))
+		     	.style("fill", "#ffff00")
+			  }
+
+			  var chooseFeature = function(d,i){
+			  	if(chosen_feature[i] == 0){
+			  		chosen_feature[i] = 1;
+			  		var rect = d3.select("#feature_variance"+String(i))
+		     		.style("fill", "#ffdab9")
+			  	}
+			  	else if(chosen_feature[i] == 1){
+			  		chosen_feature[i] = 0;
+			  		var rect = d3.select("#feature_variance"+String(i))
+		     		.style("fill", "#fa8072")
+			  	}
+			  	console.log(chosen_feature);
 			  }
 
 			  // append the bar rectangles to the svg element
@@ -588,11 +632,13 @@
 			        .attr("y",function(d,i){return y(d);})
 			        .attr("width", function(d) { return x(feature_name[1]) - x(feature_name[0]) -2*rectMargin ; })
 			        .attr("height", function(d) { return height - y(d); })
+			        .attr("id",function(d,i){return "feature_variance"+String(i)})
 			        .style("fill", "#fa8072")
 			        // Show tooltip on hover
 			        .on("mouseover", showTooltip )
 			        .on("mousemove", moveTooltip )
 			        .on("mouseleave", hideTooltip )
+			        .on("click", chooseFeature)
 			        //.attr("transform", function(d) { return "translate(" + x(d.x0) + "," + y(d.length) + ")"; })
 		}
 
@@ -716,7 +762,15 @@
 			
 		}
 
-
+		function select_feature(){
+			selected_feature = [];
+			for(var i = 0; i < feature_name.length; i++){
+				if(chosen_feature[i] == 1){
+					selected_feature.push(i);
+				}
+			}
+			console.log(selected_feature);
+		}
 
 
 
@@ -727,12 +781,36 @@
 			    width = 300 - margin.left - margin.right,
 			    height = 90 - margin.top - margin.bottom;
 
+			var showCategory = function(){
+				console.log("showCategory");
+				for(var i = 0; i < category_index.length;i++){
+					var circle = d3.select("#circle"+String(category_index[i]))
+							.style("fill", "#fa8072")
+				}
+
+			}
+
+			var mouseover = function(i){
+				var category = d3.select("#category"+String(i))
+							.style("border-color","blue")
+				console.log("mouseover")
+			}
+
+			var mouseleave = function(i){
+				var category = d3.select("#category"+String(i))
+							.style("border-color","#a1a1a1")
+			}
+
 			for(var i = 0; i < 4;i++){
 				var id = "category"+String(i);
 				var category = d3.select("#category_list")
 						.append("div")
 						.attr("class","category")
-						.attr("id",id)
+						.attr("id","category"+String(i))
+						.on("click", showCategory)
+						.on("mouseover", mouseover(i))
+						.on("mousemove", mouseover(i))
+						.on("mouseleave", mouseleave(i))
 
 				var text1 = category.append("div")
 							.attr("class","category_text")
@@ -786,7 +864,6 @@
 			
 				        //.attr("transform", function(d) { return "translate(" + x(d.x0) + "," + y(d.length) + ")"; })
 			}
-	
 		}
 
 
